Closed Bug 1439036 Opened 7 years ago Closed 7 years ago

Stop passing bogus next sibling values into restyling / frame construction.

Categories

(Core :: Layout, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla60
Tracking Status
firefox60 --- fixed

People

(Reporter: emilio, Assigned: emilio)

References

Details

Attachments

(2 files)

I think this is a regression from https://hg.mozilla.org/mozilla-central/rev/4a8294c6b8e33ba08ef767bede8deeb28234b5b8. Before that, the caller used to pass -1 as an index.
[ Triage 2017/02/20: P3 ]
Priority: -- → P3
Comment on attachment 8951803 [details] Bug 1439036: Stop passing bogus next sibling values into restyling / frame construction. https://reviewboard.mozilla.org/r/221088/#review228828
Attachment #8951803 - Flags: review?(bzbarsky) → review+
Comment on attachment 8951804 [details] Bug 1439036: Fix some other miscellaneous issues with the caller. https://reviewboard.mozilla.org/r/221090/#review228830
Attachment #8951804 - Flags: review?(bzbarsky) → review+
Pushed by ecoal95@gmail.com: https://hg.mozilla.org/integration/autoland/rev/1e9461ca597b Stop passing bogus next sibling values into restyling / frame construction. r=bz https://hg.mozilla.org/integration/autoland/rev/c1a45d6a5390 Fix some other miscellaneous issues with the caller. r=bz
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla60
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: