Bug 1439036: Stop passing bogus next sibling values into restyling / frame construction. r=bz

I think this is a regression from https://hg.mozilla.org/mozilla-central/rev/4a8294c6b8e33ba08ef767bede8deeb28234b5b8.

Before that, the only caller with NAC used to pass -1 as an index, which means
we didn't get a node back.

MozReview-Commit-ID: 7HYPaa2V3OB

--HG--
extra : rebase_source : 3f836c0de95159a4a5ece85dee1a8a26dfb2ba1f